@@ -6,7 +6,7 @@
 # Copyright (c) 2000 by Ajuba Solutions
 # All rights reserved.
 #
-# RCS: @(#) $Id: tcltest.test,v 1.33 2002/08/05 22:36:00 dgp Exp $
+# RCS: @(#) $Id: tcltest.test,v 1.34 2002/09/06 15:10:32 rmax Exp $
 
 # Note that there are several places where the value of 
 # tcltest::currentFailure is stored/reset in the -setup/-cleanup
@@ -556,12 +556,12 @@ switch $tcl_platform(platform) {
     }
 }
 
-test tcltest-8.3 {tcltest a.tcl -tmpdir notReadableDir} {unixOnly} {
+test tcltest-8.3 {tcltest a.tcl -tmpdir notReadableDir} {unixOnly nonRoot} {
     slave msg a.tcl -tmpdir $notReadableDir 
     string match {*not readable*} $msg
 } {1}
 
-test tcltest-8.4 {tcltest a.tcl -tmpdir notWriteableDir} {unixOrPc} {
+test tcltest-8.4 {tcltest a.tcl -tmpdir notWriteableDir} {unixOrPc nonRoot} {
     slave msg a.tcl -tmpdir $notWriteableDir
     string match {*not writeable*} $msg
 } {1}
@@ -616,7 +616,7 @@ test tcltest-8.11 {tcltest a.tcl -testdir thisdirectoryisafile} {unixOrPc} {
     string match "*not a directory*" $msg 
 } {1}
 
-test tcltest-8.12 {tcltest a.tcl -testdir notReadableDir} {unixOnly} {
+test tcltest-8.12 {tcltest a.tcl -testdir notReadableDir} {unixOnly nonRoot} {
     slave msg a.tcl -testdir $notReadableDir 
     string match {*not readable*} $msg
 } {1}
