@@ -1,3 +1,7 @@
+2002-09-06  Reinhard Max  <max@suse.de>
+
+	* tests/tcltest.test: Added nonRoot flag to tests 8.3, 8.4, and 8.12.
+
 2002-09-05  Don Porter  <dgp@users.sourceforge.net>
 
 	* doc/tcltest.n:  Clarified phrasing.
